--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,8 @@
 [pytest]
 
-addopts = -s --reruns 0
+addopts = -s
 
-testpaths = ./scripts
-
-python_files = test_*.py
+python_files = test_contact.py
 
 python_classes = Test*
 
